push notebook updates

--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -1445,21 +1445,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Put treatments into a list for for loop (and later for plot labels)\n",
     "treatment_list = []\n",
     "\n",
-    "# for treatment, data in treatments:\n",
-    "#     treatment_list.append(treatment)\n",
+    "# Create a treatment object in the df to loop through\n",
+    "treatment = four_treatment_reg_df.groupby(\"Drug Regimen\")\n",
+    "\n",
+    "# Create a list comprehension to populate the treatment_list array\n",
+    "treatment_list = [treatments for treatments, data in treatment]\n",
     "\n",
     "# Create empty list to fill with tumor vol data (for plotting)\n",
     "tumor_vol_data = []\n",
     "\n",
-    "tumor_vol = four_treatment_reg_df\n",
+    "# Create a tumor_vol object in the df to loop through\n",
+    "tumor_vol = four_treatment_reg_df.groupby(\"Tumor Volume (mm3)\")\n",
     "\n",
+    "# Create a list comprehension to populate the tumor_vol_data list array\n",
+    "tumor_vol_data = [tvolumes for tvolumes, data in tumor_vol]\n",
     "\n",
     "\n",
     "# Calculate the IQR and quantitatively determine if there are any potential outliers. \n",
